// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Rounded button Add chunk button (snapshot) 1`] = `
<button
  className="button-round button-add-chunk"
  onClick={undefined}
>
  <span
    className="material-icons "
    color=""
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    style={
      Object {
        "color": "rgba(0, 0, 0, 0.87)",
        "display": "inline-block",
        "fontSize": 24,
        "muiPrepared": true,
        "position": "relative",
        "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
        "userSelect": "none",
      }
    }
  >
    add
  </span>
</button>
`;

exports[`Rounded button Merge chunk button (snapshot) 1`] = `
<button
  className="button-round button-merge-chunks"
  onClick={undefined}
>
  <span
    className="material-icons "
    color=""
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    style={
      Object {
        "color": "rgba(0, 0, 0, 0.87)",
        "display": "inline-block",
        "fontSize": 24,
        "muiPrepared": true,
        "position": "relative",
        "transition": "all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms",
        "userSelect": "none",
      }
    }
  >
    vertical_align_center
  </span>
</button>
`;
